# personal-finance-cli-robert

./: .gitignore  Cargo.toml  README.md  finance.db
data/: sample.csv
docs/: architecture.md
src/: main.rs
src/cli/: mod.rs
src/db/: mod.rs
src/parser/: mod.rs
