[package]
name = "personal-finance-cli-robert"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
csv = "1.3"